<resources>
    <string name="app_name">MotivationQuotes</string>
    <string name="catCAtegoryOne">Albert Einstein</string>
    <string name="catCAtegoryTwo">Elon Musk</string>
    <string name="catCAtegoryThree">Steve Jobs</string>
    <string name="catCAtegoryFour">Mark Zuckerberg</string>
    <string name="catCAtegoryFive">Warrent Buffett</string>
    <string name="catCAtegorySix">Bill Gates</string>
    <string name="catCAtegotySeven">Sundar Pichai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemLatest">Latest</string>
    <string name="itemCategory">Category</string>
    <string name="itemAuthors">Authors</string>
    <string name="itemFav">Favaourites</string>
    <string name="itemSettings">Settings</string>
    <string name="openDrawer">"Open "</string>
    <string name="closeDrawer">Close</string>
    <string name="catSuccess">Success</string>
    <string name="catLove">Love</string>
    <string name="catLife">Life</string>
    <string name="catSad">Sad</string>
    <string name="catFamous">Famous</string>
</resources>