<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemLatest"
        android:icon="@drawable/ic_baseline_newspaper_24"
        android:title="@string/itemLatest" />
    <item
        android:id="@+id/itemCategory"
        android:icon="@drawable/ic_baseline_folder_24"
        android:title="@string/itemCategory" />
    <item
        android:id="@+id/itemAuthors"
        android:icon="@drawable/ic_baseline_person_search_24"
        android:title="@string/itemAuthors" />
    <item
        android:id="@+id/itemFav"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/itemFav" />
    <item
        android:id="@+id/itemSettings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/itemSettings" />
</menu>