<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"

    >


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A31BFD1E"
            android:theme="@style/AppTheme"
            app:titleTextColor="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-50dp"
        android:gravity="center"
        android:layout_gravity="center"
        >

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/CatOne"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:elevation="10dp"
                app:cardCornerRadius="7dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="91dp"
                        android:src="@drawable/albert_einstein" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/catCAtegoryOne"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:fontFamily="cursive" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CatTwo"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:elevation="10dp"
                app:cardCornerRadius="7dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="91dp"
                        android:src="@drawable/elon_musk" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/catCAtegoryTwo"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:fontFamily="cursive" />
                </LinearLayout>
            </androidx.cardview.widget.CardView> <androidx.cardview.widget.CardView
            android:id="@+id/CatThree"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:elevation="10dp"
            app:cardCornerRadius="7dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="91dp"
                    android:src="@drawable/steve_jobs" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catCAtegoryThree"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="cursive" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CatFour"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:elevation="10dp"
                app:cardCornerRadius="7dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="91dp"
                        android:src="@drawable/mark_zuckerberg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/catCAtegoryFour"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:fontFamily="cursive" />
                </LinearLayout>
            </androidx.cardview.widget.CardView> <androidx.cardview.widget.CardView
            android:id="@+id/CatFive"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:elevation="10dp"
            app:cardCornerRadius="7dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="91dp"
                    android:src="@drawable/warrent_buffett" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catCAtegoryFive"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="cursive" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CatSix"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:elevation="10dp"
                app:cardCornerRadius="7dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/bill_gates" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/catCAtegorySix"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:fontFamily="cursive" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CatSeven"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:elevation="10dp"
                app:cardCornerRadius="7dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/sundar_pichai" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/catCAtegotySeven"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:fontFamily="cursive" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CatEight"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:elevation="10dp"
                app:cardCornerRadius="7dp"
                app:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/image3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/catCAtegoryOne"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:fontFamily="cursive" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </RelativeLayout>
</LinearLayout>